test/compile-errors/circular-import-b.crow.ast.repr
file-ast(
	imports: ports(range(0, 29), [import-ast(".//circular-import-a", none)])
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			visibility: public
			sig: sig-ast(range(29, 36), b, inststruct(range(31, 34), name-range(31, int)), [])
			body: literal(nat(0, false)))])
